# gazelle

./: .gitignore  README.md  input.pcm
automate_playback/: input.pcm
automate_playback/src/: paex_record.c
client/: CMakeLists.txt  README.md  client.cpp
common/: env.h  seal_params.h
gazelle prototype/src/: CMakeLists.txt  beep.c  echo.c  paex_read_write_wire.c  paex_record.c
offline_audio_process/: CMakeLists.txt  README.md  input.pcm  output.pcm  script.sh
offline_audio_process/src/: CMakeLists.txt  Dialling.c  Dialling2.c  Dialling3.c  paex_record.c  playback_record.c
online_audio_process/: README.md  env_setup.sh
online_audio_process/src/client/: CMakeLists.txt  client.cpp  input.pcm
online_audio_process/src/common/: globals.h
online_audio_process/src/complex_client/: CMakeLists.txt  client.cpp
online_audio_process/src/server/worker/: worker.cpp
server/: CMakeLists.txt  README.md  server.cpp  worker.cpp
server/src/: CMakeLists.txt
test-portaudio/: CMakeLists.txt  README.md  beep.c  paex_read_write_wire.c  paex_record.c  pcm_player.c  test_function_pointer.c
test-portaudio/src/: CMakeLists.txt  beep.c  echo.c  paex_record.c  playback_record.c
test_automate_compress_playback/: README.md  input.pcm  output.pcm  script.sh
test_automate_compress_playback/doc/: default_portaudio_install_location
test_automate_compress_playback/src/: CMakeLists.txt  paex_record.c  playback_record.c
