INCLUDE_DIRECTORIES(/usr/local/include)
LINK_DIRECTORIES(/usr/local/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/bin)
SET(DYNAMIC_LIBRARIES librpc.a)

ADD_EXECUTABLE(gazelle_server server.cpp)
TARGET_LINK_LIBRARIES(gazelle_server ${DYNAMIC_LIBRARIES})
TARGET_LINK_LIBRARIES(gazelle_server rpc ${CMAKE_THREAD_LIBS_INIT})